--- a/index.html
+++ b/index.html
@@ -159,7 +159,8 @@
             <!-- YENİ: Mobil için dokunmatik talimatlar GÜNCELLENDİ -->
             <div class="touch-controls-info" style="display: none; margin-top: 15px;">
                 <p>Kontrol: Gemiye basılı tutup sürükle.</p>
-                <p>Ateş: Denize dokun (Su) | Sol Buton (Bez)</p>
+                <p>Ateş: Denize dokun (Su)</p>
+                <p>Mühimmat: Sol Butonlar (Bez/İlaç)</p>
                 <p>Hedef: Düşmana dokun (İlaç) | Hediyeye dokun (Topla)</p>
             </div>
         </div>
@@ -459,7 +460,7 @@
             score = 0;
             frameCount = 0;
             ammoCount = 5;
-            syringeAmmoCount = 0; 
+            syringeAmmoCount = 3; // YENİ: 0'dan 3'e değiştirildi (Başlangıç mühimmatı)
             coastYPosition = -300; 
             coastReachedThreshold = false;
             damageFlashTimer = 0; 
